moved from @Dependent1 to @Independent1

--- a/src/docs/asciidoc/road-to-immutability/010-intro.adoc
+++ b/src/docs/asciidoc/road-to-immutability/010-intro.adoc
@@ -1,5 +1,5 @@
 Main website: https://www.e2immu.org.
-Second major iteration, end of August 2021.
+Third major iteration, beginning of October 2021.
 
 [dedication]
 == Dedication
