--- a/src/docs/asciidoc/road-to-immutability/077-hidden-content.adoc
+++ b/src/docs/asciidoc/road-to-immutability/077-hidden-content.adoc
@@ -1,64 +1,12 @@
 [#hidden-content]
-== Immutable content
+== Hidden content
 
-[#inaccessible-immutable-content]
-=== Inaccessible immutable content
-
-From the point of view of the definition of level 2 immutability, fields are either already level 2 immutable, or they are modifiable and the rules of level 2 immutability have to ensure that no modifications can take place.
-
-Inside the combined object graphs of the fields of a level 2 immutable type, we can make another distinction: between those objects whose content is accessible, and those whose content is 'invisible' because they are only represented by a (typically very) shallow interface which is level 2 immutable.
-In the case of unbound parameter types, as specified in <<generics>>, we chose to represent them in the type by `java.lang.Object`, or an empty interface, which is very shallow indeed.
-
-Let's go back to the simplest definition of a `Pair`,
-
-.Example {counter:example}, `Pair` revisited, again
-[source,java]
-----
-@E2Container
-public class Pair<K, V> {
-    public final K k;
-    public final V v;
-
-    public Pair(K k, V v) {
-        this.k = k;
-        this.v = v;
-    }
-}
-----
-
-Think of `K` and `V` as empty interfaces, which hide almost all data held by their concrete instances.
-(The reason for the _almost_ is the presence, for every object, of an implementation of `toString` and `equals`, however little informative they may be.)
-
-On the opposite end of the spectrum we find:
-
-.Example {counter:example}, a type with fully accessible data
-[source,java]
-----
-@E2Container
-public record Coordinate(int x, int y, int z) {}
-----
-
-In `Coordinate`, all the data is readily accessible, and, because of the finality of the class, no extensions can ever be made to add more (hidden, when presented with `Coordinate`) data.
-
-In this continuum between accessible and inaccessible, it seems impossible to draw a line, and, luckily, our definitions do not require us to do so.
-The reason we bring up this point is to highlight the distinction between level 2 immutability and deep immutability:
-Outside the level 2 immutable type, the inaccessible immutable content it holds need not be inaccessible, nor immutable, at all!
-
-.Example {counter:example}, usage of `Pair`, outside its definition
-[source,java]
-----
-Pair<StringBuilder, Integer> twoBuilders = new Pair<>(new StringBuilder("x"), 1);
-twoBuilders.k.append("!");
-----
-
-In the rest of this chapter, we will attempt to catch and propagate some modifications made by concrete implementations of abstract methods.
-The machinery provided in the earlier chapters will be shown to be insufficient.
-Please note that characterising _all_ such modifications is a hopelessly complex, and unnecessary, task.
-We will, however, need to deal with what can be seen as the first level of modifications to the immutable content, if we want to be able to characterise the modifications going on in extremely important constructs such as iterators.
+In this section, we consider modifications to the hidden content of a type, and when they are of importance.
+We give a formal definition of deeply or recursively immutable, and a sliding scale between level 2 and recursively immutable.
 
 === Visitors
 
-Let's go back to `NonEmptyImmutableList`, first defined in <<abstract-methods>>:
+Let's start by going back to `NonEmptyImmutableList`, first defined in <<abstract-methods>>:
 
 .Example {counter:example}, revisiting `NonEmptyImmutableList`
 [source,java]
